# 20260703test

./: .gitignore  LICENSE  Untitled.ipynb  main.py  practice1.ipynb  practice2.ipynb  practice3+1.ipynb  practice3.ipynb  practice3.py  practice4.ipynb  practice4.py  practice5.py  practice6.py  pyproject.toml  stderr.txt  stderr2.txt  stdout.txt  stdout2.txt  stock.py
.gradio/flagged/: dataset1.csv
iris/: iris_model.joblib  requirements.txt  train_save.py
