[project]
name = "20260703"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "jupyter>=1.1.1",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jupyterlab-lsp>=5.3.0",
]
