[project]
name = "20260703"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "ensemble>=0.0.dev1",
    "fastapi[standard]>=0.139.2",
    "gradio>=6.20.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "model-selection>=0.0.1",
    "plotly>=6.9.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "spaces>=0.51.1",
    "typing>=3.10.0.0",
    "uvicorn>=0.51.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jupyterlab-lsp>=5.3.0",
]
